--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>MyBlog</title>
-    <base href="/" />
+    <base href="/Blog/" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="css/app-content.css" rel="stylesheet" />
 </head>
