fixed base href error

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 ﻿<!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>ILogger</title>
-    <base href="/Blog" />
+    <base href="/Blog/" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="css/app-content.css" rel="stylesheet" />
     <link href="prism/prism.css" rel="stylesheet" />
@@ -42,7 +41,6 @@
             Prism.GetPrismLanguages = () => Object.keys(Prism.languages);
     </script>
 </head>
-
 <body>
     <app><div class="app-loading"><img src="imgs/loading.svg" /></div></app>
     <div id="blazor-error-ui">
@@ -52,5 +50,4 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
-
 </html>
